Layout: Prevent horizontal scrolling.

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -10,6 +10,8 @@ body {
     transparent
   );
   background-attachment: fixed;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 a {
